# what-would-jesse-do

./: .gitignore  CNAME  README.md  index.html  main.py  pyproject.toml
doc/: jesse-2010s-teens.md  jesse-childhood.md  jesse-early-2000s.md  jesse-eulogy-final-thoughts.md  jesse-eulogy-intro.md  jesse-high_school-after.md  jesse-last-years.md  jesse-pre_teen-teen.md
doc/topics/: general-001.md  general-002.md  general-003.md
doc/topics/childhood/: childhood-001.md  childhood-002.md
src/: generate.py  topics.py
src/templates/: base.html  eulogy-final-thoughts.html  eulogy-intro.html  index.html  jesse-2010s-and-teens.html  jesse-childhood.html  jesse-early-2000s.html  jesse-high_school-after.html  jesse-last-years.html  jesse-preteen-teen.html  wwjd-navbar.html  wwjd-widget.html  year.html
src/templates/cards/: ai-card-group.html  card-groups.html  card.html
years/: 01981.html  01982.html  01983.html  01984.html  01985.html  01986.html  01987.html  01988.html  01989.html  01990.html  01991.html  01992.html  01993.html  01994.html  01995.html  01996.html  01997.html  01998.html  01999.html  02000.html  02001.html  02002.html  02003.html  02004.html  02005.html  02006.html  02007.html  02008.html  02009.html  02010.html  02011.html  02012.html  02013.html  02014.html  02015.html  02016.html  02017.html  02018.html  02019.html  02020.html  (+5 more)
