[project]
name = "what-would-jesse-do"
version = "0.1.0"
description = "What Would Jesse Do? A memorial website for Jesse Robert Nelson (01981-02025)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "jinja2>=3.1.6",
    "markdown>=3.8",
    "pydantic>=2.11.5",
]
